# job-backend

./: README.md  pyproject.toml  requirements.txt
carrers/: db.sqlite3  manage.py
carrers/carrers/: asgi.py  settings.py  urls.py  wsgi.py
carrers/easy_apply_job/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
carrers/easy_apply_job/migrations/: 0001_initial.py  0002_job_experience_job_requirements_alter_job_type.py  0003_rename_type_job_job_type.py  0004_company_person.py  0005_alter_person_job.py  0006_alter_person_id.py  0007_alter_job_experience_alter_job_requirements.py  0008_job_user.py  0009_alter_job_options_alter_job_requirements.py  0010_application.py  0011_person_resume.py  0012_remove_person_job_alter_person_apply_to.py
carrers/easy_apply_job/static/easy_apply_job/: main.css
carrers/easy_apply_job/templates/easy_apply_job/: add_job.html  applied.html  apply_job.html  base.html  detail.html  listing.html  navbar.html  register.html
