[tool.poetry]
name = "job-board"
version = "0.1.0"
description = "a simple job board backend written in a django framework."
authors = ["Rajan Karki <rajankarkee8@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
